# introspect-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.md
examples/: claude-code.md  cursor-mcp.json
src/introspect_mcp/: __init__.py  introspect.py  server.py
tests/: test_introspect.py
