[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "introspect-mcp"
version = "0.1.0"
description = "MCP server that introspects the exact packages installed in your project — real signatures, docstrings, and source — so AI coding agents stop hallucinating APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hritik Datta", email = "hritikdatta2403@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "llm",
    "ai-agents",
    "claude",
    "cursor",
    "introspection",
    "code-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/Hritikd/introspect-mcp"
Repository = "https://github.com/Hritikd/introspect-mcp"
Issues = "https://github.com/Hritikd/introspect-mcp/issues"

[project.scripts]
introspect-mcp = "introspect_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/introspect_mcp"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
